--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ section{
 }
 .btn{
     cursor: pointer;
-    border-bottom: 0;
+    border: 0;
     padding: 6px 12px;
     border-radius: 3px;
     line-height: 1.4;
