--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,61 @@ section{
     font-size: 16px;
     color: #364147;
 }
-
-
-
+.header-nav{
+    border-bottom: #a0a0a0 1px;
+}
+.brand{
+    height: 170px;
+    width: 85px;
+    margin-left: -15px;
+    margin-right: 60px;
+}
+.logo{
+    max-width: 100%;
+    height: auto;
+}
+.search-box{
+    height: 330px;
+    width: 30px;
+    padding: 6px 12px;
+    border: #a0a0a0 1px;
+}
+.search-button{
+    background-color: #a0a0a0;
+    color: white;
+    height: 100px;
+    width: 30px;
+    border: 0;
+    padding: 0;
+}
+.nav-list{
+    padding-left: 0;
+    width: 575px;
+    margin-top: 10px;
+}
+.nav-list li a{
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 0.2px;
+}
+.profile{
+    margin-left: auto;
+}
+.account{
+    text-align: right;
+    padding: 15px;
+    color: #364147;
+    size: 18px;
+}
+.account li{
+    font-size: 14px;
+}
+.profile-pic{
+    height: 60px;
+    width: 60px;
+}
+.profile-pic img{
+    border-radius: 100px;
+    max-width: 100%;
+}
