--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@ section{
     width: 330px;
     height: 30px;
     padding: 6px 12px;
-    border: #a0a0a0 1px;
+    border: #a0a0a0 solid 1px;
 }
 .search-button{
     background-color: #a0a0a0;
@@ -113,7 +113,7 @@ section{
     text-align: right;
     padding: 15px;
     color: #364147;
-    size: 18px;
+    font-size: 14px;
 }
 .account li{
     font-size: 14px;
