--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,7 @@ section{
     background-image: url(../img/hero.jpg);
     height: 400px;
     background-size: cover;
-    background-position: center;
+    background-position: center center;
     text-transform: uppercase;
 }
 .hero h1{
@@ -140,7 +140,7 @@ section{
 .hero h2{
     color: #faa541;
 }
-.hero h1 h2{
+.hero h1 .hero h2{
     font-size: 63px;
     font-weight: 700;
     line-height: 0.9;
@@ -154,7 +154,7 @@ section{
 .banner{
     margin: 55px 15px;
     width: 100%;
-    border-top: 10x solid #a0a0a0;
+    border-top: 1x solid #a0a0a0;
     border-bottom: 1px solid #a0a0a0;
     padding: 25px 0;
 }
