--- a/css/main.css
+++ b/css/main.css
@@ -135,12 +135,12 @@ section{
 }
 .hero h1{
     position: relative;
-    padding-left: -30px;
+    left: -30px;
 }
 .hero h2{
     color: #faa541;
 }
-.hero h1 .hero h2{
+.hero h1, .hero h2{
     font-size: 63px;
     font-weight: 700;
     line-height: 0.9;
@@ -154,7 +154,7 @@ section{
 .banner{
     margin: 55px 15px;
     width: 100%;
-    border-top: 1x solid #a0a0a0;
+    border-top: 1px solid #a0a0a0;
     border-bottom: 1px solid #a0a0a0;
     padding: 25px 0;
 }
