--- a/css/main.css
+++ b/css/main.css
@@ -201,7 +201,7 @@ line-height: 1;
     margin: 50px 0;
     position: relative;
 }
-.full-banner::before{
+.full-banner:before{
     content: "";
     position: absolute;
     border: 1px solid #ffffff;
@@ -232,7 +232,7 @@ line-height: 1;
     color: #637f94;
     line-height: 1;
 }
-.full-banner-sidebar h4::after{
+.full-banner-sidebar h4:after{
 content: "";
 width: 100px;
 height: 1px;
@@ -250,7 +250,7 @@ font-size: 25px;
 font-weight: 200;
 letter-spacing: 3px;
 }
-.full-banner-sidebar, .btn.btn-default{
+.full-banner-sidebar .btn.btn-default{
     margin-top: 50px;
     text-transform: uppercase;
     letter-spacing: 1px;
