--- a/css/main.css
+++ b/css/main.css
@@ -257,6 +257,7 @@ letter-spacing: 3px;
     z-index: 1;
 }
 footer{
+    display: flex;
     flex-wrap: wrap;
     position: relative;
     z-index: 0;
@@ -276,7 +277,6 @@ footer:after{
 }
 .lists{
     flex: 0 0 75%;
-    column-gap: 15px 15px;
     padding: 40px 0;
 }
 .link-header{
@@ -343,7 +343,12 @@ footer a:hover{
     padding: 40px 0;
     color: #e5e5e5;
     font-size: 16px;
+}
+.ps img{
     max-width: 230px;
+}
+.demo{
+    padding: 0 30px;
 }
 .demo:before{
     content: "";
@@ -352,9 +357,6 @@ footer a:hover{
     height: 1px;
     margin: 30px 0;
     background: linear-gradient(to right, #f05a28 0, #e80a89 100%);
-}
-.demo{
-    padding: 0 30px;
 }
 .copyright{
     flex: 0 0 75%;
