--- a/css/main.css
+++ b/css/main.css
@@ -277,7 +277,7 @@ footer:after{
 }
 .lists{
     flex: 0 0 75%;
-    padding: 40px 0;
+    padding: 40px 15px;
 }
 .link-header{
     text-transform: uppercase;
@@ -350,7 +350,7 @@ footer a:hover{
 .demo{
     padding: 0 30px;
 }
-.demo:before{
+.demo:before { 
     content: "";
     display: block;
     width: 100%;
