--- a/css/main.css
+++ b/css/main.css
@@ -213,7 +213,7 @@ line-height: 1;
 }
 .full-banner-image{
     flex: 0 0 58.333333%;
-    background-image: url(../img/vista.jpg);
+    background-image: url('../img/vista.jpg');
     background-size: cover;
     background-position: top center;
     min-height: 400px;
